--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.FYPProject"
         tools:targetApi="31">
         <activity
+            android:name=".SignInActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CreateNewAccountActivity"
+            android:exported="false" />
+        <activity
             android:name=".ActivityActivity"
             android:exported="false" />
         <activity
@@ -24,7 +30,7 @@
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
-            android:name=".AccoutDetails"
+            android:name=".AccountDetails"
             android:exported="false" />
         <activity
             android:name=".CreateAccountActivity"
